final cover for about me

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 <!-- cuerpo -->
 <body>
            <header><h1>Israel P.Buenrostro</h1></header>
-<!-- primera division -->
- <div class= "container">
-     <section id="main-bio">
-            <section id="contact-info">
-                       <ul>
-                           <li><strong><a href="#">About</a></strong></li>
-                           <li><strong><a href="#">Portfolio</a></strong></li>
-                           <li><strong><a href="#">contact</a></strong></li>
-                        </ul>
-               </section>
-            <section><h2>About Me</h2></section>
-               <hr>
+           <div id="contactlinks">
+            <ul>
+                <li><strong><a href="#">About</a></strong></li>
+                <li><strong><a href="#">Portfolio</a></strong></li>
+                <li><strong><a href="#">contact</a></strong></li>
+             </ul>
+            </div>
+
+           <!-- primera division -->
+           <h2>About Me</h2>
+           <div class= "wrapper">
+ <hr>
+            <br>
+               <!-- <hr> -->
                <br>
      <section>          
                <img id="bio-image" src="assets/images/IMG_E1800.png" alt="Israel P.Buenrostro" height="175px";>
@@ -29,16 +31,10 @@
     </section>
 
 
-   <!-- <section id="contact-info">
-        <h2>Contact Info</h2>
-           <ul>
-               <li><strong><a href="#">About</a></strong></li>
-               <li><strong><a href="#">Portfolio</a></strong></li>
-               <li><strong><a href="#">contact</a></strong></li>
-            </ul> -->
-   <!-- </section> -->
+   
  </div>
-
+ <hr>
+ <footer>©Copyright 2018 MrInP</footer>
 </body>
 
 
