adding new files

--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
 <head>
     <meta chaset="UTF-8">
     <title>Student Bio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <!-- cuerpo -->
 <body>
            <header><h1>Israel P.Buenrostro</h1></header>
            <div id="contactlinks">
             <ul>
-                <li><strong><a href="#">About</a></strong></li>
-                <li><strong><a href="#">Portfolio</a></strong></li>
-                <li><strong><a href="#">contact</a></strong></li>
+                <li><strong><a href="index.html">About</a></strong></li>
+                <li><strong><a href="index1.html">Portfolio</a></strong></li>
+                <li><strong><a href="index2.html">contact</a></strong></li>
              </ul>
             </div>
-
+<br>
            <!-- primera division -->
-           <h2>About Me</h2>
+           <!-- <h2>About Me</h2> -->
            <div class= "wrapper">
+                <h2>About Me</h2>
  <hr>
             <br>
                <!-- <hr> -->
@@ -34,25 +37,11 @@
    
  </div>
  <hr>
- <footer>©Copyright 2018 MrInP</footer>
+  <!-- jQuery, javascript file for the Bootstrap's javascript file to function -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <!-- Bootstrap's javascript file that allows the dropdown menu to work  -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<footer>©Copyright 2018 MrInP</footer>
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
