--- a/index1.html
+++ b/index1.html
@@ -27,33 +27,33 @@
                <!-- <hr> -->
                <br>
                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/IMG_0361.jpg" alt="Card image cap">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Hangman</p>
                     </div>
 
                     <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+                            <img class="card-img-top" src="assets/images/IMG_8127.jpg" alt="Card image cap">
                             <div class="card-body">
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <p class="card-text">RPG Game</p>
                             </div>
 
                             <div class="card" style="width: 18rem;">
-                                    <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+                                    <img class="card-img-top" src="assets/images/IMG_8128.jpg" alt="Card image cap">
                                     <div class="card-body">
-                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <p class="card-text">Trivia Game</p>
                                     </div>
 
                                     <div class="card" style="width: 18rem;">
-                                            <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+                                            <img class="card-img-top" src="assets/images/IMG_7214.jpg" alt="Card image cap">
                                             <div class="card-body">
-                                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                              <p class="card-text">Info Widget</p>
                                             </div>
 
                                             <div class="card" style="width: 18rem;">
-                                                    <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+                                                    <img class="card-img-top" src="assets/images/IMG_0343.jpg" alt="Card image cap">
                                                     <div class="card-body">
-                                                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                      <p class="card-text">Rock Paper Scissors</p>
                                                     </div>
 
 
