--- a/index2.html
+++ b/index2.html
@@ -28,11 +28,11 @@
                <br>
                <form>
                     <div class="form-group">
-                      <label for="exampleFormControlInput1">Email address</label>
+                      <label for="exampleFormControlInput1">Email</label>
                       <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                     </div>
-                    <div class="form-group">
-                      <label for="exampleFormControlSelect1">Example select</label>
+                    <!-- <div class="form-group">
+                      <label for="exampleFormControlSelect1">Name</label>
                       <select class="form-control" id="exampleFormControlSelect1">
                         <option>1</option>
                         <option>2</option>
@@ -40,9 +40,9 @@
                         <option>4</option>
                         <option>5</option>
                       </select>
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleFormControlSelect2">Example multiple select</label>
+                    </div> -->
+                    <!-- <div class="form-group">
+                      <label for="exampleFormControlSelect2">text</label>
                       <select multiple class="form-control" id="exampleFormControlSelect2">
                         <option>1</option>
                         <option>2</option>
@@ -50,12 +50,28 @@
                         <option>4</option>
                         <option>5</option>
                       </select>
-                    </div>
+                    </div> -->
                     <div class="form-group">
-                      <label for="exampleFormControlTextarea1">Example textarea</label>
+                      <label for="exampleFormControlTextarea1">Message</label>
                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                   </form>
+                  <form>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Name</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1">Password</label>
+                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        </div>
+                        <div class="form-group form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
    
  </div>
  <hr>
