well..here it goes..updated pages couldnt reposition pictures

--- a/index1.html
+++ b/index1.html
@@ -26,34 +26,43 @@
             <br>
                <!-- <hr> -->
                <br>
+        <div class= "primeraFoto">
                <div class="card" style="width: 18rem;">
                     <img class="card-img-top" src="assets/images/IMG_0361.jpg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Hangman</p>
-                    </div>
-
+                 </div>
+        </div>
+        </div>
+<div class= "segundaFoto">
                     <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/images/IMG_8127.jpg" alt="Card image cap">
                             <div class="card-body">
                               <p class="card-text">RPG Game</p>
                             </div>
-
+                            </div>
+                            </div>
+                            <div class= "terceraFoto">
                             <div class="card" style="width: 18rem;">
                                     <img class="card-img-top" src="assets/images/IMG_8128.jpg" alt="Card image cap">
                                     <div class="card-body">
                                       <p class="card-text">Trivia Game</p>
                                     </div>
-
+                                    <div class= "cuartaFoto">
                                     <div class="card" style="width: 18rem;">
                                             <img class="card-img-top" src="assets/images/IMG_7214.jpg" alt="Card image cap">
                                             <div class="card-body">
                                               <p class="card-text">Info Widget</p>
                                             </div>
+                                            </div>
+                                        </div>
 
+                                            <div class= "quintaFoto"></div>
                                             <div class="card" style="width: 18rem;">
                                                     <img class="card-img-top" src="assets/images/IMG_0343.jpg" alt="Card image cap">
                                                     <div class="card-body">
                                                       <p class="card-text">Rock Paper Scissors</p>
+                                                    </div>
                                                     </div>
 
 
@@ -67,4 +76,5 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <footer>©Copyright 2018 MrInP</footer>
 </body>
+
 </html>
