messed up the picture files..here it goes again

--- a/index1.html
+++ b/index1.html
@@ -28,7 +28,7 @@
                <br>
         <div class= "primeraFoto">
                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="assets/images/IMG_0361.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="assets/images/IMG_0361.png" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Hangman</p>
                  </div>
@@ -36,7 +36,7 @@
         </div>
 <div class= "segundaFoto">
                     <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/images/IMG_8127.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="assets/images/IMG_8127.png" alt="Card image cap">
                             <div class="card-body">
                               <p class="card-text">RPG Game</p>
                             </div>
@@ -44,13 +44,13 @@
                             </div>
                             <div class= "terceraFoto">
                             <div class="card" style="width: 18rem;">
-                                    <img class="card-img-top" src="assets/images/IMG_8128.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="assets/images/IMG_8128.png" alt="Card image cap">
                                     <div class="card-body">
                                       <p class="card-text">Trivia Game</p>
                                     </div>
                                     <div class= "cuartaFoto">
                                     <div class="card" style="width: 18rem;">
-                                            <img class="card-img-top" src="assets/images/IMG_7214.jpg" alt="Card image cap">
+                                            <img class="card-img-top" src="assets/images/IMG_7214.png" alt="Card image cap">
                                             <div class="card-body">
                                               <p class="card-text">Info Widget</p>
                                             </div>
@@ -59,7 +59,7 @@
 
                                             <div class= "quintaFoto"></div>
                                             <div class="card" style="width: 18rem;">
-                                                    <img class="card-img-top" src="assets/images/IMG_0343.jpg" alt="Card image cap">
+                                                    <img class="card-img-top" src="assets/images/IMG_0343.png" alt="Card image cap">
                                                     <div class="card-body">
                                                       <p class="card-text">Rock Paper Scissors</p>
                                                     </div>
