--- a/index2.html
+++ b/index2.html
@@ -60,7 +60,7 @@
                         <div class="form-group">
                           <label for="exampleInputEmail1">Name</label>
                           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
-                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                          <small id="emailHelp" class="form-text text-muted">First and Last name</small>
                         </div>
                         <div class="form-group">
                           <label for="exampleInputPassword1">Password</label>
